<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rdk_bottle_hunter</name>
  <version>0.1.0</version>
  <description>
    ROS2 refactor of the RDK X5 bottle hunter: YOLOv5 (BPU) camera detection,
    LiDAR obstacle avoidance and STM32 motor control split into cooperating nodes.
  </description>
  <maintainer email="dev@example.com">rdk</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rdk_interfaces</exec_depend>
  <exec_depend>vp100_ros2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
